--- a/diffforms.cabal
+++ b/diffforms.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: f4cff7802b637a98a59c07a4cfc9d6399511289237cf9b0cf32b6a3dbd45a47f
+-- hash: 73d430c263974e909dadd2db4a47a1e1141277da779834df7d6e5bf0e3095067
 
 name:           diffforms
 version:        0.1.0.0
@@ -66,6 +66,7 @@ test-suite diffforms-test
   main-is: Spec.hs
   other-modules:
       TestC
+      TestHelpers
       TestR
       TestV
       Paths_diffforms
