Fixed linter warnings

--- a/.hlint.yaml
+++ b/.hlint.yaml
@@ -7,6 +7,7 @@
 
 
 # Warnings currently triggered by your code
+- ignore: {name: "Use foldr"}
 - ignore: {name: "Use mconcat"}
 - ignore: {name: "Avoid lambda using `infix`"}
 - ignore: {name: "Monoid law, left identity"}
